test/conformance/kuttl/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/02-trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
  namespace:  testing
data:
  color: blue
