test/conformance/kuttl/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/04-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: ConfigMap
  name: my-configmapmy-configmapmy-configmapmy-configmapmy-configmapmy-configmap
  namespace: testing
