test/conformance/kuttl/generate/clusterpolicy/cornercases/trigger-resource-name-exceeds-63-characters/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name:  generate-network-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
